# hdmi-test

./: .gitignore  CMakeLists.txt  DESIGN.md  DISPLAY_SOLUTION.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  README.md
context/designs/: design-changelog.md
context/impl/: hdmi-test-screen.md  hikrobot-camera-sdk.md  max-performance.md  yolov8-tensorrt.md
context/kits/: hdmi-test-screen.md
context/plans/: hdmi-test-screen.md
deploy/: hdmi-kiosk-recovery.service  hdmi-max-performance.service  hdmi-weston-kiosk.service  hdmi-weston-smoke.service  hdmi-x11-kiosk.service  hdmi-x11-kiosk.user.service  mvs-aarch64.conf  weston-kiosk.ini
include/hdmi_test/: font_renderer.hpp  hik_camera.hpp  kms_display.hpp  latency_stats.hpp  system_metrics.hpp  test_pattern.hpp  touch_state.hpp  yolo_detector.hpp  yolo_preprocess.hpp
src/: egl_stress.cpp  font_renderer.cpp  hik_camera.cpp  hik_camera_probe.cpp  kms_display.cpp  main.cpp  system_metrics.cpp  test_pattern.cpp  wayland_kiosk.cpp  x11_kiosk.cpp  yolo_detector.cpp  yolo_preprocess.cu
tests/: test_latency_stats.cpp  test_pattern.cpp  test_system_metrics.cpp  test_touch_state.cpp  test_yolo_postprocess.cpp  test_yolo_preprocess.cpp
